--- a/main.css
+++ b/main.css
@@ -18,14 +18,49 @@ small.page_no {
 
 .pagination {
   background-color: #eee;
+  border: 1px solid gray;
   margin: 10px 0px;
+  width: 57%;
+  font-size: 20px;
+  line-height: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .pagination a {
   color: #222;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .pagination a.disabled {
   color: #ccc;
 }
+
+.pagination ol {
+  display: inline;
+  padding: 0 10px;
+}
+
+.pagination li {
+  display: inline-block;
+  border-right: 1px solid gray;
+  margin: -1px;
+  margin-left: -5px;
+  text-align: center;
+  width: 39px;
+}
+
+.pagination li a {
+  display: block;
+}
+
+.pagination li:first-child {
+  border-left: 1px solid gray;
+}
+
+.pagination .active {
+  background-color: gray;
+  text-decoration: none;
+}
+
+
